bk_ida/sjengida/c0/search
/data/output_dir/patch/sjeng/ida/clang/O0/sjeng-clang-O0/search/src/search.c:1117:4: error: use of undeclared identifier 'search_rc_index'
&& search_rc_index[path[ply - 1].captured] == search_rc_index[path[ply - 2].captured] ) 
   ^
/data/output_dir/patch/sjeng/ida/clang/O0/sjeng-clang-O0/search/src/search.c:1117:47: error: use of undeclared identifier 'search_rc_index'
&& search_rc_index[path[ply - 1].captured] == search_rc_index[path[ply - 2].captured] ) 
                                              ^
2 errors generated.
make: *** [/data/output_dir/patch/sjeng/ida/clang/O0/sjeng-clang-O0/search/src/obj/search.o] Error 1
